test/bad/1.cc
int main()
{
    int x, y, z;
    int x;
}